<?xml version="1.0" encoding="utf-8"?>

    <LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
               android:orientation="vertical"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:layout_centerInParent="true"
               android:background="@drawable/bg"
               android:padding="10dp">
<!--<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
              <!--android:layout_width="match_parent"-->
              <!--android:layout_height="match_parent"-->
              <!--android:orientation="horizontal">-->

    <TextView
            android:id="@+id/top_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="2"
            android:text="@string/name"/>


    <EditText android:id="@+id/name"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:hint="@string/enter_name"/>

<!--</LinearLayout>-->

    <!--<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
                  <!--android:layout_width="match_parent"-->
                  <!--android:layout_height="match_parent"-->
                  <!--android:orientation="horizontal">-->

        <TextView
                android:id="@+id/top_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="2"
                android:text="@string/age"/>


        <EditText android:id="@+id/age"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:hint="@string/enter_age"/>

    <!--</LinearLayout>-->

    <!--<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
                  <!--android:layout_width="match_parent"-->
                  <!--android:layout_height="match_parent"-->
                  <!--android:orientation="horizontal">-->

        <TextView
                android:id="@+id/top_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="2"
                android:text="@string/gender"/>


        <Spinner android:id="@+id/gender"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:entries="@array/gender_array"
                  android:prompt="@string/gender_prompt"/>

    <!--</LinearLayout>-->

    <!--<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
                  <!--android:layout_width="match_parent"-->
                  <!--android:layout_height="match_parent"-->
                  <!--android:orientation="horizontal">-->

        <TextView
                android:id="@+id/top_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="2"
                android:text="@string/contact"/>


        <EditText android:id="@+id/contact"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:hint="@string/enter_contact"/>

    <!--</LinearLayout>-->

    <!--<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
                  <!--android:layout_width="match_parent"-->
                  <!--android:layout_height="match_parent"-->
                  <!--android:orientation="horizontal">-->

        <TextView
                android:id="@+id/top_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="2"
                android:text="@string/emergency_name"/>


        <EditText android:id="@+id/emergency_name"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:hint="@string/enter_emergency_name"/>

    <!--</LinearLayout>-->

    <!--<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
                  <!--android:layout_width="match_parent"-->
                  <!--android:layout_height="match_parent"-->
                  <!--android:orientation="horizontal">-->

        <TextView
                android:id="@+id/top_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="2"
                android:text="@string/emergency_contact"/>


        <EditText android:id="@+id/emergency_contact"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:hint="@string/enter_emergency_contact"/>

    <Button
            android:id="@+id/btnSubmit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Register"/>

    <!--</LinearLayout>-->

</LinearLayout>
